# UTWorkshopGMock

./: CMakeLists.txt  README.md
src/: CoinFlipper.cpp  CoinFlipper.hpp  RandomGenerator.hpp
test/: MockRandomGenerator.cpp  MockRandomGeneratorVP.cpp
